https://github.com/JothaDevelopment/Fase3DisenoWebJonathanVergara.git}

--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
         <header>
             <div class="superior">
                 
-                <img src="CSS/images/logoUNAD-HD.png" alt="" width="100%"> 
+                <img src="IMG/logoUNAD-HD.png" alt="" width="100%"> 
                 <div class="titulo" style="color: #F0B429"> <h1>OVI DISEÑO WEB</h1> </div>
                 
             </div>
@@ -30,8 +30,8 @@
                     <a href="#">Lectura 1</a>
                     <a href="#">Lectura 2</a>
                     <a href="#">Lectura 3</a>
-                    <a href="#">Lectura 4</a>
-                    <a href="#">Lectura 5</a>
+                    <!-- <a href="#">Lectura 4</a>
+                    <a href="#">Lectura 5</a> -->
                 </div>
                 </li>
                 <li><a href="#">Multimedia</a></li>
