https://github.com/JothaDevelopment/Fase3DisenoWebJonathanVergara.git

--- a/Pag_InstalGIT.html
+++ b/Pag_InstalGIT.html
@@ -30,11 +30,11 @@
             <li class="desplegable">
                 <a class="btnDesplegable" href="#">Lecturas</a>
                 <div class="contenidoDesplegable">
-                        <a href="Pag_Pautas.html">Pautas Desarrollo WEB</a>
-                        <a href="Pag_IntroGIT.html">Introducción a GIT</a>
-                        <a href="Pag_InstalGIT.html">Instalación GIT y GITHUB</a>
-                        <a href="Pag_CSS3.html">Guía Completa CSS3</a>
-                        <a href="Pag_HTML5.html">Guía Completa HTML5</a>
+                    <a href="Pag_Pautas.html">Pautas Desarrollo WEB</a>
+                    <a href="Pag_IntroGIT.html">Introducción a GIT</a>
+                    <a href="Pag_InstalGIT.html">Instalación GIT y GITHUB</a>
+                    <a href="Pag_CSS3.html">Guía Completa CSS3</a>
+                    <a href="Pag_HTML5.html">Guía Completa HTML5</a>
                 </div>
             </li>
             <li class="desplegable2">
@@ -57,29 +57,24 @@
     <section class="contenedor">
         <section class="principal">
             <article>
-                <h2>Inicio</h2>
-                Estimado (a) estudiante, sea bienvenido al Objeto Virtual de Información O.V.I. diseñado
-                por el equipo docente de la red académica del curso, sobre las temáticas del curso Diseño de Sitios WEB.
-                En este material encontrará contenidos de lectura y contenidos multimediales
-                que le ayudaran en el desarrollo de las actividades académicas relacionadas con esta unidad didáctica.
+                
+                    Estimado (a) estudiante, a continuación encontrará la siguiente actividad practica 
+                    formativa que servirá como guía en el proceso de instalación y configuración del 
+                    sistema de control de versiones (SCV) GIT y el cliente de escritorio de la plataforma 
+                    de gestión de repositorios GITHUB. esperamos que este material sea de mucha ayuda 
+                    en su proceso de formación.
                 <br>
                 <br>
-                Es importante que navegue por los diferentes materiales para que los
-                reconozca y los pueda aprovechar de la mejor forma, hemos tratado de consolidar
-                para este O.V.I. un banco de materiales actualizado y con estrecha relación
-                con los contenidos y la actividades del curso.
+                <iframe src="PDF/InstalacionGIT.pdf" frameborder="0" width="100%" height="400"></iframe>
+                <br>
                 <br>
             </article>
         </section>
         <br>
         <br>
-        <aside>
-
-            <a width="500" height="250" class="twitter-timeline"
-                href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a>
-            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <!-- <aside>
             <br>
-            <br>
+            
             <div id="sfcpcyyp4dnk1l895m3tre74n8crh3pn1gb"></div>
             <script type="text/javascript"
                 src="https://counter10.wheredoyoucomefrom.ovh/private/counter.js?c=pcyyp4dnk1l895m3tre74n8crh3pn1gb&down=async"
@@ -87,7 +82,7 @@
             <noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas"><img
                         src="https://counter10.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=pcyyp4dnk1l895m3tre74n8crh3pn1gb"
                         border="0" title="contador de visitas" alt="contador de visitas"></a></noscript>
-        </aside>
+        </aside> -->
     </section>
     <footer>
         <br>
