https://github.com/JothaDevelopment/Fase3DisenoWebJonathanVergara.git

--- a/Index.html
+++ b/Index.html
@@ -46,7 +46,7 @@
                 </div>
             </li>
             <li><a href="#">Actividades</a></li>
-            <li><a href="#">Autores</a></li>
+            <li><a href="Pag_Autor.html">Autores</a></li>
 
         </ul>
 
