--- a/Pag_Autor.html
+++ b/Pag_Autor.html
@@ -58,13 +58,19 @@
         <section class="principal">
             <article>
                 
-                    Estimado (a) estudiante a continuación encontrará un libro de acceso libre elaborado
-                    por Antonio Navajas Ojeda, el cual posee un curso practico paso a paso sobre CSS3,
-                    este completo material de seguro le será de mucha ayuda en su proceso de formación,
-                    esperamos le pueda dar un uso adecuado y sobre todo lea y practique mucho...
+                    <h2>Jonathan Vergara Arango</h2>
+                    <div>
+                     Código: 1214717797 <br>
+                     Programa: Ingeniería de Sistemas <br>
+                     Correo electrónico: vergara-713@hotmail.com <br>
+                     Usuario Skype:  live:jotha_development <br>
+
+                     <img src="" alt="">
+
+                    </div>
                 <br>
                 <br>
-                <iframe src="PDF/CursoCSS3.pdf" frameborder="0" width="100%" height="400"></iframe>
+                
                 <br>
                 <br>
             </article>
