--- a/Pag_IntroGIT.html
+++ b/Pag_IntroGIT.html
@@ -47,7 +47,7 @@
                 </div>
             </li>
             <li><a href="#">Actividades</a></li>
-            <li><a href="#">Autores</a></li>
+            <li><a href="Pag_Autor.html">Autores</a></li>
 
         </ul>
 
