https://github.com/JothaDevelopment/Fase3DisenoWebJonathanVergara.git

--- a/Index.html
+++ b/Index.html
@@ -30,22 +30,29 @@
             <li class="desplegable">
                 <a class="btnDesplegable" href="#">Lecturas</a>
                 <div class="contenidoDesplegable">
-                        <a href="Pag_Pautas.html">Pautas Desarrollo WEB</a>
-                        <a href="Pag_IntroGIT.html">Introducción a GIT</a>
-                        <a href="Pag_InstalGIT.html">Instalación GIT y GITHUB</a>
-                        <a href="Pag_CSS3.html">Guía Completa CSS3</a>
-                        <a href="Pag_HTML5.html">Guía Completa HTML5</a>
+                    <a href="Pag_Pautas.html">Pautas Desarrollo WEB</a>
+                    <a href="Pag_IntroGIT.html">Introducción a GIT</a>
+                    <a href="Pag_InstalGIT.html">Instalación GIT y GITHUB</a>
+                    <a href="Pag_CSS3.html">Guía Completa CSS3</a>
+                    <a href="Pag_HTML5.html">Guía Completa HTML5</a>
                 </div>
             </li>
             <li class="desplegable2">
                 <a class="btnDesplegable2" href="#">Material Multimedia</a>
                 <div class="contenidoDesplegable2">
-                        <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
-                        <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
+                    <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
+                    <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
 
                 </div>
             </li>
-            <li><a href="#">Actividades</a></li>
+            <li class="desplegable3">
+                <a class="btnDesplegable3" href="#">Actividades</a>
+                <div class="contenidoDesplegable3">
+                    <a href="Pag_SopaLetras.html">Sopa de Letras</a>
+                    <a href="Pag_Ahorcaito.html">Ahorcaito</a>
+                    <a href="Pag_UnirP.html">Unir Palabras</a>
+                </div>
+            </li>
             <li><a href="Pag_Autor.html">Autores</a></li>
 
         </ul>
