--- a/Pag_Ahorcaito.html
+++ b/Pag_Ahorcaito.html
@@ -65,11 +65,11 @@
         <section class="principal">
             <article>
 
-                Estimado (a) estudiante a continuación se presenta un juego de sopa de letras
-                en el cual puede practicar buscando las palabras relacionadas con HTML y CSS
+                Estimado (a) estudiante a continuación se presenta un juego de Ahorcaito
+                en el cual puede practicar encontrando la palabra relacionada sintaxis con HTML y CSS
                 <br>
                 <br>
-                <iframe src="ACTIVITY/SopaLetras/SopaLetras.htm" frameborder="0" width="100%" height="400"></iframe>
+                <iframe src="ACTIVITY/Ahorcaito/Ahorcaito.htm" frameborder="0" width="100%" height="400"></iframe>
                 <br>
                 <br>
             </article>
