--- a/Pag_CSS3.html
+++ b/Pag_CSS3.html
@@ -40,12 +40,19 @@
             <li class="desplegable2">
                 <a class="btnDesplegable2" href="#">Material Multimedia</a>
                 <div class="contenidoDesplegable2">
-                        <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
-                        <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
+                    <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
+                    <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
 
                 </div>
             </li>
-            <li><a href="#">Actividades</a></li>
+            <li class="desplegable3">
+                <a class="btnDesplegable3" href="#">Actividades</a>
+                <div class="contenidoDesplegable3">
+                    <a href="Pag_SopaLetras.html">Sopa de Letras</a>
+                    <a href="Pag_Ahorcaito.html">Ahorcaito</a>
+                    <a href="Pag_UnirP.html">Unir Palabras</a>
+                </div>
+            </li>
             <li><a href="Pag_Autor.html">Autores</a></li>
 
         </ul>
@@ -57,11 +64,11 @@
     <section class="contenedor">
         <section class="principal">
             <article>
-                
-                    Estimado (a) estudiante a continuación encontrará un libro de acceso libre elaborado
-                    por Antonio Navajas Ojeda, el cual posee un curso practico paso a paso sobre CSS3,
-                    este completo material de seguro le será de mucha ayuda en su proceso de formación,
-                    esperamos le pueda dar un uso adecuado y sobre todo lea y practique mucho...
+
+                Estimado (a) estudiante a continuación encontrará un libro de acceso libre elaborado
+                por Antonio Navajas Ojeda, el cual posee un curso practico paso a paso sobre CSS3,
+                este completo material de seguro le será de mucha ayuda en su proceso de formación,
+                esperamos le pueda dar un uso adecuado y sobre todo lea y practique mucho...
                 <br>
                 <br>
                 <iframe src="PDF/CursoCSS3.pdf" frameborder="0" width="100%" height="400"></iframe>
