--- a/Pag_HTML5.html
+++ b/Pag_HTML5.html
@@ -40,12 +40,19 @@
             <li class="desplegable2">
                 <a class="btnDesplegable2" href="#">Material Multimedia</a>
                 <div class="contenidoDesplegable2">
-                        <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
-                        <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
+                    <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
+                    <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
 
                 </div>
             </li>
-            <li><a href="#">Actividades</a></li>
+            <li class="desplegable3">
+                <a class="btnDesplegable3" href="#">Actividades</a>
+                <div class="contenidoDesplegable3">
+                    <a href="Pag_SopaLetras.html">Sopa de Letras</a>
+                    <a href="Pag_Ahorcaito.html">Ahorcaito</a>
+                    <a href="Pag_UnirP.html">Unir Palabras</a>
+                </div>
+            </li>
             <li><a href="Pag_Autor.html">Autores</a></li>
 
         </ul>
@@ -57,12 +64,12 @@
     <section class="contenedor">
         <section class="principal">
             <article>
-                
-                    Estimado (a) estudiante a continuación Ashley Menhennett y Pablo Farias Navarro
-                    desde su comunidad de desarrollo Front End llamada ZENVA, nos ofrecen un importante 
-                    material libre a manera de guía sobre HTML5 y CSS3, aunque este material esta en 
-                    idioma inglés, sabemos que será de mucha ayuda en su proceso de formación, esperamos 
-                    que pueda hacer un uso adecuado de este.
+
+                Estimado (a) estudiante a continuación Ashley Menhennett y Pablo Farias Navarro
+                desde su comunidad de desarrollo Front End llamada ZENVA, nos ofrecen un importante
+                material libre a manera de guía sobre HTML5 y CSS3, aunque este material esta en
+                idioma inglés, sabemos que será de mucha ayuda en su proceso de formación, esperamos
+                que pueda hacer un uso adecuado de este.
                 <br>
                 <br>
                 <iframe src="PDF/GuiaHTML5.pdf" frameborder="0" width="100%" height="400"></iframe>
