--- a/Pag_InstalGIT.html
+++ b/Pag_InstalGIT.html
@@ -40,12 +40,19 @@
             <li class="desplegable2">
                 <a class="btnDesplegable2" href="#">Material Multimedia</a>
                 <div class="contenidoDesplegable2">
-                        <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
-                        <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
+                    <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
+                    <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
 
                 </div>
             </li>
-            <li><a href="#">Actividades</a></li>
+            <li class="desplegable3">
+                <a class="btnDesplegable3" href="#">Actividades</a>
+                <div class="contenidoDesplegable3">
+                    <a href="Pag_SopaLetras.html">Sopa de Letras</a>
+                    <a href="Pag_Ahorcaito.html">Ahorcaito</a>
+                    <a href="Pag_UnirP.html">Unir Palabras</a>
+                </div>
+            </li>
             <li><a href="Pag_Autor.html">Autores</a></li>
 
         </ul>
@@ -57,12 +64,12 @@
     <section class="contenedor">
         <section class="principal">
             <article>
-                
-                    Estimado (a) estudiante, a continuación encontrará la siguiente actividad practica 
-                    formativa que servirá como guía en el proceso de instalación y configuración del 
-                    sistema de control de versiones (SCV) GIT y el cliente de escritorio de la plataforma 
-                    de gestión de repositorios GITHUB. esperamos que este material sea de mucha ayuda 
-                    en su proceso de formación.
+
+                Estimado (a) estudiante, a continuación encontrará la siguiente actividad practica
+                formativa que servirá como guía en el proceso de instalación y configuración del
+                sistema de control de versiones (SCV) GIT y el cliente de escritorio de la plataforma
+                de gestión de repositorios GITHUB. esperamos que este material sea de mucha ayuda
+                en su proceso de formación.
                 <br>
                 <br>
                 <iframe src="PDF/InstalacionGIT.pdf" frameborder="0" width="100%" height="400"></iframe>
