--- a/Pag_IntroGIT.html
+++ b/Pag_IntroGIT.html
@@ -42,11 +42,18 @@
                 <div class="contenidoDesplegable2">
                     <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
                     <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
-                    
+
 
                 </div>
             </li>
-            <li><a href="#">Actividades</a></li>
+            <li class="desplegable3">
+                <a class="btnDesplegable3" href="#">Actividades</a>
+                <div class="contenidoDesplegable3">
+                    <a href="Pag_SopaLetras.html">Sopa de Letras</a>
+                    <a href="Pag_Ahorcaito.html">Ahorcaito</a>
+                    <a href="Pag_UnirP.html">Unir Palabras</a>
+                </div>
+            </li>
             <li><a href="Pag_Autor.html">Autores</a></li>
 
         </ul>
@@ -58,12 +65,12 @@
     <section class="contenedor">
         <section class="principal">
             <article>
-                
-                    Estimado (a) estudiante, a continuación encontrará la siguiente lectura en formato 
-                    de presentación, donde encontrará una breve introducción al sistema de control de 
-                    versiones GIT. esperamos que la pueda revisar muy bien, ya que esta le ofrece 
-                    elementos muy importantes sobre la estructura y al forma en que este SCV, gestiona
-                    repositorios de forma eficaz.  
+
+                Estimado (a) estudiante, a continuación encontrará la siguiente lectura en formato
+                de presentación, donde encontrará una breve introducción al sistema de control de
+                versiones GIT. esperamos que la pueda revisar muy bien, ya que esta le ofrece
+                elementos muy importantes sobre la estructura y al forma en que este SCV, gestiona
+                repositorios de forma eficaz.
                 <br>
                 <br>
                 <iframe src="PDF/IntroGIT.pdf" frameborder="0" width="100%" height="400"></iframe>
