--- a/Pag_Pautas.html
+++ b/Pag_Pautas.html
@@ -40,12 +40,19 @@
             <li class="desplegable2">
                 <a class="btnDesplegable2" href="#">Material Multimedia</a>
                 <div class="contenidoDesplegable2">
-                        <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
-                        <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
+                    <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
+                    <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
 
                 </div>
             </li>
-            <li><a href="#">Actividades</a></li>
+            <li class="desplegable3">
+                <a class="btnDesplegable3" href="#">Actividades</a>
+                <div class="contenidoDesplegable3">
+                    <a href="Pag_SopaLetras.html">Sopa de Letras</a>
+                    <a href="Pag_Ahorcaito.html">Ahorcaito</a>
+                    <a href="Pag_UnirP.html">Unir Palabras</a>
+                </div>
+            </li>
             <li><a href="Pag_Autor.html">Autores</a></li>
 
         </ul>
@@ -57,12 +64,12 @@
     <section class="contenedor">
         <section class="principal">
             <article>
-                
-                Estimado (a) estudiante, a continuación encontrará la siguiente lectura desarrollada 
-                por un grupo de estudiantes del curso de un periodo anterior, esta lectura 
-                que esta en formato de presentación; nos entrega información 
-                relevante sobre las pautas para la gestión de un proyecto de desarrollo web, 
-                esperamos que la pueda revisar muy bien, ya que esta le ofrece elementos 
+
+                Estimado (a) estudiante, a continuación encontrará la siguiente lectura desarrollada
+                por un grupo de estudiantes del curso de un periodo anterior, esta lectura
+                que esta en formato de presentación; nos entrega información
+                relevante sobre las pautas para la gestión de un proyecto de desarrollo web,
+                esperamos que la pueda revisar muy bien, ya que esta le ofrece elementos
                 muy importantes a considerar a la hora de desarrollar proyectos de Diseño Web.
                 <br>
                 <br>
