--- a/Pag_Vid_Intro_HTML5.html
+++ b/Pag_Vid_Intro_HTML5.html
@@ -40,12 +40,19 @@
             <li class="desplegable2">
                 <a class="btnDesplegable2" href="#">Material Multimedia</a>
                 <div class="contenidoDesplegable2">
-                        <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
-                        <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
+                    <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
+                    <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
 
                 </div>
             </li>
-            <li><a href="#">Actividades</a></li>
+            <li class="desplegable3">
+                <a class="btnDesplegable3" href="#">Actividades</a>
+                <div class="contenidoDesplegable3">
+                    <a href="Pag_SopaLetras.html">Sopa de Letras</a>
+                    <a href="Pag_Ahorcaito.html">Ahorcaito</a>
+                    <a href="Pag_UnirP.html">Unir Palabras</a>
+                </div>
+            </li>
             <li><a href="Pag_Autor.html">Autores</a></li>
 
         </ul>
@@ -57,12 +64,14 @@
     <section class="contenedor">
         <section class="principal">
             <article>
-                
-                    Estimado (a) Estudiante, en este vídeo podrá revisar 
-                    una breve introducción a HTML5 con sus elementos más relevantes.
+
+                Estimado (a) Estudiante, en este vídeo podrá revisar
+                una breve introducción a HTML5 con sus elementos más relevantes.
                 <br>
                 <br>
-                <iframe width="100%" height="400" src="https://www.youtube.com/embed/_93kDSPlKIM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="400" src="https://www.youtube.com/embed/_93kDSPlKIM" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                 <br>
                 <br>
             </article>
