--- a/Pag_Autor.html
+++ b/Pag_Autor.html
@@ -40,12 +40,19 @@
             <li class="desplegable2">
                 <a class="btnDesplegable2" href="#">Material Multimedia</a>
                 <div class="contenidoDesplegable2">
-                        <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
-                        <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
+                    <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
+                    <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
 
                 </div>
             </li>
-            <li><a href="#">Actividades</a></li>
+            <li class="desplegable3">
+                <a class="btnDesplegable3" href="#">Actividades</a>
+                <div class="contenidoDesplegable3">
+                    <a href="Pag_SopaLetras.html">Sopa de Letras</a>
+                    <a href="Pag_Ahorcaito.html">Ahorcaito</a>
+                    <a href="Pag_UnirP.html">Unir Palabras</a>
+                </div>
+            </li>
             <li><a href="Pag_Autor.html">Autores</a></li>
 
         </ul>
@@ -57,20 +64,20 @@
     <section class="contenedor">
         <section class="principal">
             <article>
-                
-                    <h2>Jonathan Vergara Arango</h2>
-                    <div>
-                     Código: 1214717797 <br>
-                     Programa: Ingeniería de Sistemas <br>
-                     Correo electrónico: vergara-713@hotmail.com <br>
-                     Usuario Skype:  live:jotha_development <br>
 
-                     <img src="" alt="">
+                <h2>Jonathan Vergara Arango</h2>
+                <div>
+                    Código: 1214717797 <br>
+                    Programa: Ingeniería de Sistemas <br>
+                    Correo electrónico: vergara-713@hotmail.com <br>
+                    Usuario Skype: live:jotha_development <br>
 
-                    </div>
+                    <img src="" alt="">
+
+                </div>
                 <br>
                 <br>
-                
+
                 <br>
                 <br>
             </article>
