--- a/Pag_UnirP.html
+++ b/Pag_UnirP.html
@@ -40,17 +40,17 @@
             <li class="desplegable2">
                 <a class="btnDesplegable2" href="#">Material Multimedia</a>
                 <div class="contenidoDesplegable2">
-                    <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
-                    <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
+                        <a href="Pag_Vid_Intro_CSS.html">Video Introducción a CSS3</a>
+                        <a href="Pag_Vid_Intro_HTML5.html">Video HTML5</a>
 
                 </div>
             </li>
             <li class="desplegable3">
                 <a class="btnDesplegable3" href="#">Actividades</a>
                 <div class="contenidoDesplegable3">
-                    <a href="Pag_SopaLetras.html">Sopa de Letras</a>
-                    <a href="Pag_Ahorcaito.html">Ahorcaito</a>
-                    <a href="Pag_UnirP.html">Unir Palabras</a>
+                   <a href="Pag_SopaLetras.html">Sopa de Letras</a>
+                   <a href="Pag_Ahorcaito.html">Ahorcaito</a>
+                   <a href="Pag_UnirP.html">Unir Palabras</a>
                 </div>
             </li>
             <li><a href="Pag_Autor.html">Autores</a></li>
@@ -64,12 +64,13 @@
     <section class="contenedor">
         <section class="principal">
             <article>
-
-                Estimado (a) estudiante a continuación se presenta un juego de sopa de letras
-                en el cual puede practicar buscando las palabras relacionadas con HTML y CSS
+                
+                    Estimado (a) estudiante a continuación se presenta un juego de Unir Palabras
+                    en el cual puede practicar encontrando la palabra relacionada a la descripción sobre
+                    HTML y CSS
                 <br>
                 <br>
-                <iframe src="ACTIVITY/SopaLetras/SopaLetras.htm" frameborder="0" width="100%" height="400"></iframe>
+                <iframe src="ACTIVITY/UnirCeldas/UnirCeldas.htm" frameborder="0" width="100%" height="400"></iframe>
                 <br>
                 <br>
             </article>
