https://github.com/JothaDevelopment/Fase3DisenoWebJonathanVergara.git

--- a/Pag_Autor.html
+++ b/Pag_Autor.html
@@ -65,14 +65,15 @@
         <section class="principal">
             <article>
 
-                <h2>Jonathan Vergara Arango</h2>
-                <div>
+
+                <div class="Autors">
+                    <h2>Jonathan Vergara Arango</h2>
                     Código: 1214717797 <br>
                     Programa: Ingeniería de Sistemas <br>
                     Correo electrónico: vergara-713@hotmail.com <br>
                     Usuario Skype: live:jotha_development <br>
-
-                    <img src="" alt="">
+                    <br>
+                    <img src="IMG/Autor.jpg" alt="" width="40%">
 
                 </div>
                 <br>
